--- a/_posts/CV/2016-05-29-CV.md
+++ b/_posts/CV/2016-05-29-CV.md
@@ -1,7 +1,7 @@
 ---
-layout: page
-title: About
-categories: articles
+layout: post
+title: CV
+categories: CV
 ---
 # SungPil Han, M.D./Ph.D.
 +82-10-6782-0522 pil.han@gmail.com
