--- a/_posts/2016-06-07-Tozer.md
+++ b/_posts/2016-06-07-Tozer.md
@@ -5,6 +5,7 @@ date: 2016-06-07
 tags: Clinical Pharmacology
 ---
 Tozer 11 Multiple Dose
+
 ```r
 TIME=4*0:9
 
@@ -16,4 +17,5 @@ AMT4=AMT8[1:8]+AMT8[2:9]
 plot(AMT4)
 AMT4
 ```
-# cum 을 참고.
+
+cum function을 참고.
