--- a/_posts/2016-06-07-Tozer.md
+++ b/_posts/2016-06-07-Tozer.md
@@ -4,9 +4,14 @@ title: Tozer 11장 연습문제 6번
 date: 2016-06-07
 tags: Clinical Pharmacology
 ---
+
+Prof.Lim's lecture
+
 Tozer 11 Multiple Dose
 
-```
+This is the R code for multiple dose mimicking the continuous infusion of a virtual drug with continuous and uniform release over time.
+
+```r
 TIME=4*0:9
 
 AMT8=50*(1-exp(-0.693/4*TIME))
@@ -18,4 +23,4 @@ plot(AMT4)
 AMT4
 ```
 
-cum function을 참고.
+Refer to cum() function
