--- a/_posts/2016-06-12-Git-Atom.md
+++ b/_posts/2016-06-12-Git-Atom.md
@@ -17,3 +17,25 @@ Atom Editor와 Github의 synergestic effects가 참으로 크다고 느껴지는
 
 ### Reference
 http://stackoverflow.com/questions/33325204/how-can-i-run-git-commit-and-git-push-in-atom
+
+### Keys
+Command	Effect	Default key binding
+Git Run	Execute a custom command. ex. fetch --all
+Git Status	Show current status.	Cmd-Shift-A S
+Git Add	Add the current file.	Cmd-Shift-A
+Git Add All	Adds all changed files.
+Git add and commit and push	Commit currently open file and push to a remote repo.	Cmd-Shift-A P
+Git add all commit and push	Commit every changed file and push to a remote repo.	Cmd-Shift-A P
+Git commit	Commit the staged changes. Git-Plus shows a commit message editor. To make the commit, save the file. To cancel the commit, close the tab.	Cmd-Shift-C(Ctrl-Shift-X on Windows and Linux)
+Git commit amend	Amend the changes to previous commit.
+Git checkout current file	Undo changes and checkout the current file.
+Git Checkout[ref]	Change to another ref (branch or tag).
+Git Diff [All]	Show the diff for the current file, or all files. The diff can either be against the staged or un-staged tree, as selected in the options.
+Git new branch	Create a new branch.
+Git [push⎮pull]	Push to or pull from a remote repo. If you have multiple remote repos, you can choose which to push to or pull from.
+Git Add and Commit	Add all changed files and show the commit message file. Similar to Git add all and Git commit run in succession.	Cmd-Shift-A c
+Git Add All and Commit	Add all changed files and show the commit message file. Similar to Git add all and Git commit in succession.	Cmd-Shift-A a
+Git rm [current file]	git rm the current file or open an selector to select the files to remove. You can select multiple files at once.
+Git Log [Current File]	Show the commit history [for the current file] and show display the selected commit.
+Git Show	Show the specified object, for example HEAD, HEAD~2,3925a0d, origin/master or v2.7.3.
+Git Open Changed Files	Open tabs with all added, modified or renamed files.
