--- a/_posts/2016-06-12-Git-Atom.md
+++ b/_posts/2016-06-12-Git-Atom.md
@@ -6,9 +6,9 @@ layout: post
 ### Contents
 Git 명령어를 Atom Editor에서 바로 쓸 수 있는 [Package git-plus](https://atom.io/packages/git-plus)가 존재하다니 정말 혁명적이다.
 
-지금 이 글도 Atom에서 바로 올리는 글이다.
+> 지금 이 글도 Atom에서 바로 올리는 글이다.
 
-세상에는 참 대단한 사람들이 많다는 것을 느낀다.
+세상에는 참 대단한 사람들이 많다는 것을 새삼 느낀다.
 
 Atom Editor와 Github의 synergestic effects가 참으로 크다고 느껴지는 순간이다.
 
