--- a/_posts/2016-05-25-Pirana.md
+++ b/_posts/2016-05-25-Pirana.md
@@ -3,11 +3,17 @@ layout: post
 title: Pirana and PsN
 ---
 
-여러 제한 점이 있음에도 유용하고 쓸만한 프로그램이란 생각이 든다.
+여러 제한 점이 있음에도 유용하고 쓸만한 프로그램이란 생각이 듭니다.
 
-지금까지 임교수님 강의를 전부 Pirana, PsN으로 돌려보고 복습해 봐야 겠다.
+지금까지 임교수님 강의를 전부 Pirana, PsN으로 돌려보고 복습해 봐야 겠습니다.
 
-Modeling and Simulation Workbench for NONMEM: Tutorial on Pirana, PsN, and Xpose
+* [Modeling and Simulation Workbench for NONMEM: Tutorial on Pirana, PsN, and Xpose](http://onlinelibrary.wiley.com/doi/10.1038/psp.2013.24/pdf)
 RJ Keizer, MO Karlsson and A Hooker
-http://onlinelibrary.wiley.com/doi/10.1038/psp.2013.24/pdf
+* [Official Website](http://www.pirana-software.com/)
+* [VPC and NPC user guide PsN 4.6.0 Revised 2016-04-04](http://psn.sourceforge.net/pdfdocs/vpc_npc_userguide.pdf)
 
+마지막 링크의 서문은 다음과 같습니다.
+> NPC – Numerical Predictive Check – is a model diagnostics tool.
+> VPC – Visual Predictive Check – is another closely related diagnostics tool.
+A set of simulated datasets are generated using the model to be evaluated. Afterwards the real data observations are compared with the distribution of the simulated observations. By default no model estimation is ever performed. The input to the NPC script is the model to be evaluated, the number of samples (simulated datasets) to generate, parameter values options for the
+simulations, and stratification options for the evaluation. It is also possible to skip the simulation step entirely by giving two already created tablefiles as input. The input to the VPC script is the input to NPC plus an additional set of options. A large portion of the processing is identical between the scripts.
