--- a/_posts/2016-05-29-prayer.md
+++ b/_posts/2016-05-29-prayer.md
@@ -2,17 +2,9 @@
 layout: post
 title: What?
 date:   2016-05-28
-categories: jekyll update
+categories: blog
 ---
+
 Let me start.
 
-Probably I would definitely use. 
-
-> How?
-
-## First
-
-## Second
-
-  Great
-	  post
+> Then what?
