--- a/_posts/2016-06-13-PIPET.md
+++ b/_posts/2016-06-13-PIPET.md
@@ -1,8 +1,8 @@
 ---
-Title: Summary of TMDD(Target Mediated Drug Disposition) - From Physiology to Pharmacokinetics
-Author: Sungpil Han
-Date: 2016-06-13
-Layout: post
+title: Summary of TMDD(Target Mediated Drug Disposition) - From Physiology to Pharmacokinetics
+author: Sungpil Han
+date: 2016-06-13
+layout: post
 ---
 
 KSCPT 2016 - Workshop
@@ -47,8 +47,8 @@ KSCPT 2016 - Workshop
   - Group 3 - ptn vaccines
   - Group 4 - ptn diagnostics
 
-> Leader B et al. Protein therapeutics. Nat Rev Drug Discov. 2008.
-> This shows large amounts of examples. (Group 1-4)
+> [Leader B et al. Protein therapeutics. Nat Rev Drug Discov. 2008.](https://www.acsu.buffalo.edu/~abagati/dropbox/New%20folder/Protein%20Therapeutics-%20Summary%20and%20Pharmacological%20Classification.pdf)
+> This shows a number of examples. (Group 1-4)
 
 - Biologics (includes) Therapeutic proteins (includes) mAb
 - What is mAb?
