--- a/_posts/2016-06-13-PIPET.md
+++ b/_posts/2016-06-13-PIPET.md
@@ -1,17 +1,19 @@
 ---
-title: Summary of TMDD(Target Mediated Drug Disposition) - From Physiology to Pharmacokinetics
-author: Sungpil Han
+title: Summary of TMDD, 2016 KSCPT workshop
 date: 2016-06-13
 layout: post
 ---
+
+# Summary of TMDD(Target Mediated Drug Disposition) - From Physiology to Pharmacokinetics
 
 KSCPT 2016 - Workshop
 
 {frontmatter}
 
 # Introduction
-
--  2:00~2:10 Course Introduction 임동석 교수님 PIPET, Catholic
+## 2:00~2:10 Course Introduction
+임동석 교수님(PIPET, Catholic)께서 workshop에 대해 소개해 주셨습니다.
+> 외국의 1주일 workshop을 다녀오면 3-4주간 digestion해야 자신의 지식으로 만들수 있습니다.
 
 {mainmatter}
 
@@ -49,6 +51,7 @@ KSCPT 2016 - Workshop
 
 > [Leader B et al. Protein therapeutics. Nat Rev Drug Discov. 2008.](https://www.acsu.buffalo.edu/~abagati/dropbox/New%20folder/Protein%20Therapeutics-%20Summary%20and%20Pharmacological%20Classification.pdf)
 > This shows a number of examples. (Group 1-4)
+> Very nice review paper regarding protein therapeutics
 
 - Biologics (includes) Therapeutic proteins (includes) mAb
 - What is mAb?
@@ -78,14 +81,13 @@ KSCPT 2016 - Workshop
 
 ## 4:10~5:00 Implementations in PK models for mAb/Therapeutic Protein
 
-
-## Day 2: TMDD model learning: From hands to brain 임동석
+# Day 2: TMDD model learning: From hands to brain 임동석
 - 6월 14일 부산벡스코 제1전시장 회의실 214호
 
-#### 09:00~09:30 Enzyme kinetics (Michaelis-Menten) and Antigen-Antibody reaction
+## 09:00~09:30 Enzyme kinetics (Michaelis-Menten) and Antigen-Antibody reaction
 
-#### 09:30~11:00 Looking into the TMDD model
+## 09:30~11:00 Looking into the TMDD model
 
-#### 10:00~12:00 Approximate methods - QE, QSS and M-M models
+## 10:00~12:00 Approximate methods - QE, QSS and M-M models
 
 {backmatter}
