--- a/_posts/2016-06-13-PIPET.md
+++ b/_posts/2016-06-13-PIPET.md
@@ -4,8 +4,7 @@ date: 2016-06-13
 layout: post
 ---
 
-# Summary of TMDD(Target Mediated Drug Disposition) - From Physiology to Pharmacokinetics
-
+From Physiology to Pharmacokinetics
 KSCPT 2016 - Workshop
 
 {frontmatter}
@@ -17,8 +16,9 @@ KSCPT 2016 - Workshop
 
 {mainmatter}
 
-# Day 1: Physiologic basis for mAb/protein pharmacokinetics 한승훈 교수님 PIPET, Catholic
+# Day 1: Physiologic basis for mAb/protein pharmacokinetics
 
+- Lecturer: 한승훈 교수님 PIPET, Catholic
 - 6월 13일 부산벡스코 제1전시장 회의실 214호
 
 ## 2:10~3:00 mAb/Therapeutic Protein, what are they?
@@ -29,7 +29,6 @@ KSCPT 2016 - Workshop
   - Various sources
 - Hard to manufacture (peptide chains)
   - complex structure
-  - using biologics
   - asceptic principles
 
 > "Biological products often represent the cutting edge of biomedical research."
@@ -75,11 +74,75 @@ KSCPT 2016 - Workshop
   - Mouse - Chimeric - Humanized - Human
   - Freq of administration(high->low)
   - Repeated admin(difficult->possible)
-  - Effector function|CDC,ADCC(low->high)
+  - Effector function | CDC,ADCC(low->high)
 
 ## 3:10~4:00 Incorporation of physiology to the PK of mAb/Therapeutic Protein
+- What is PK? ADME
+- Exposure - Response relationship
+  - This is especially important.
+- Guidance - Europe - PK evaluation of protein therapeutics
+- chronotrophic - diurnal variation
+  - We never know individual diurnal conc of protein but we don't need to know it either. Becuase we're only focusing on **population**
+- Absorption
+  - SC adm -> lymphatic system
+  - recovery in lymph is correlated to MW.
+- Disposition
+  - Central to peripheral
+  - Distribution (inside the body) vs Elimination (outside the body or change to another substance)
+  - 각부분에선 degradation이 안되고, specific tissue에서 degradation vs "Protein은 몸 어디에서든 degradation 될 수 있습니다."
+
+> There is an inverse corr b/w ss Vss and MW. A comparable relationship is seen also for permeability and MW.
+
+|char|small molecules|mAb|
+|-|-|-|
+|route of adm|all|parenteral|
+|V|wide range|40-70mL/kg ~ **Plasma volume**|
+|Elimination|CYP,UGT|Non-specific-normal catabolism, specific-TMDD|
+
+- key structure for determining distribution
+endothelial cells
+- Cross capillary wall
+- Fenestrated capillary - endothelial walls
+- pore size
+  - <1nm
+- Starling equation
+
+{$$}
+JV \propto (P_c - P_i) - (\pi_{pp}-\pi_{ip})
+{/$$}
+
+- Prediction of human CL from nonclinical Data
+- Catabolic pathway
+  1. allometric approach : Renal CL
+  2. IVIVE - in vitro -> in vivo prediction
+- Prediction of CL : allometric approach
+  - Filtration
+  - Anion < neutral < Cation
+  - CL {$$}\propto{/$$} GFR
+- Blood CL
+- FcRn recycling - allowing long half-life (Mitragotri, 2014, Nat Dev Drug Discovery)
+  - Monocyte or endothelial cells
+  - PH가 중요하다. Kd가 작을수록 더 잘 붙는다. 더 잘 보호된다. 따라서 t1/2가 높아짐.
+  - FcRn이 일어나는 것과 안일어나는 것 - Fc가 있는가 없는가에 따라서.
+- 모두 occupy 되어 있으면 maximal elimination - Zero order를 따라서 제거됨.
+
+
 
 ## 4:10~5:00 Implementations in PK models for mAb/Therapeutic Protein
+
+
+
+## Questions
+
+1. Individual - Diurnal variation - Insulin? Plasma Glucose biomarker - 결국 Precision medicine에서 biomarker를 쉽게 측정할 수 있다면..? Group 1a?
+2. Route of adm - all vs parenteral(IV,IM,SC)
+임형석 교수님-먹는 Ab의 개발 가능성
+
+## Reference
+- http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4505827/
+-
+
+---
 
 # Day 2: TMDD model learning: From hands to brain 임동석
 - 6월 14일 부산벡스코 제1전시장 회의실 214호
