--- a/_posts/2016-06-14-2016-KSCPT.md
+++ b/_posts/2016-06-14-2016-KSCPT.md
@@ -12,7 +12,7 @@ layout: post
 - Chair : Deborah Chee(KoNECT)
 
 ### 13:20~14:00	Precision Medicine: A Clinical Pharmacological Perspective
-> Speaker: [Munir Pirmohamed](https://en.wikipedia.org/wiki/Munir_Pirmohamed) (University of Liverpool, UK)
+- Speaker: [Munir Pirmohamed](https://en.wikipedia.org/wiki/Munir_Pirmohamed) (University of Liverpool, UK)
 - Fava beans - Favism G6PD deficiency - withrawal of antimalarials
 - 2015 Obama Precision Medicine $215m / 2016 China $8b
 - Phenotypic definition(current standard) - Molecular definition (disease stratification) - Drug variability
@@ -45,7 +45,7 @@ layout: post
   2. clinical pharma dynamic medical specialty
 
 ### 14:00~14:30	The role of pharmacogenomics in drug development, regulatory review and clinical practice
-> Speaker: Shiew-Mei Huang (North Potomac, MD, USA)
+- Speaker: Shiew-Mei Huang (North Potomac, MD, USA)
 - CPIC (Clinical pharmacogenetics guidelines)
 - IFNL3(IL28B) HCV treatment Favorable response = 77% Asian (Genotype CC)
 - Paving the way for Personalized Medicine (Oct 2013)
@@ -68,7 +68,7 @@ layout: post
 - One NGS - individual test to is there a review of all-in-one Test in progress?
 
 ### 14:30~15:00	The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology
-> Speaker: Eric Chun Yong Chan (National University of Singapore)
+- Speaker: Eric Chun Yong Chan (National University of Singapore)
 - Liver - major organ for disposition and detoxification
 - 60% (explanble) vs 40% (how about this?) - superorganism
 - 400 different species (~1.5kg)
@@ -101,7 +101,7 @@ layout: post
 - Chair : Yong-Bok Lee(Chonnam National University)
 
 ### 15:20~15:50	The role of stem cells in discovery and validation of pharmacogenomic markers
-> Speaker : Eileen Dolan (The University of Chicago, USA)
+- Speaker : Eileen Dolan (The University of Chicago, USA)
 - Ototoxicity, CTx Toxicity - hearing loss, peripheral neuropathy
 - dose-limiting toxicity - platinum, taxanes, vinca, epothilones, bortezomib
 - numbness, tingling, burning/stabbing pain
@@ -130,7 +130,7 @@ layout: post
 - Neurons- mature enough?
 
 ### 15:50~16:20	Pharmacogenomics and Epigenomics
-> Speaker: Matthias Schwab (IKP Stuttgart, Germany)
+- Speaker: Matthias Schwab (IKP Stuttgart, Germany)
 - Prognostic predictors
 - Genetic make-up
 - 135 FDA-approved drugs with labeled pharmacogenomic information (2015-05-20)
@@ -151,7 +151,7 @@ layout: post
 - Epigenomics
 
 ### 16:20~16:50	Emerging roles of human CYP1B1 in cancer growth and metastasis
-> Speaker: Young-Jin Chun (Chung-Ang University, KOREA)
+- Speaker: Young-Jin Chun (Chung-Ang University, KOREA)
 - P450 (CYP1B1)
 - Estrogen metabolism : E2->4-OHE2(endogenous mutagen)
 - ZYC300 cancer vaccine - CYP1B1 DNA Vaccine
@@ -167,7 +167,7 @@ layout: post
 - Matrigel, migration -> migration, invasion
 
 ### 16:50~17:20	omics for precision Medicine : Clinical Implementation in oncology
-> Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)
+- Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)
 - effects are not immediate / severe adverse effects / narrow therapeutic window
 - UGT1A1 genotypes - different enzyme activities | Irinotecan
 - Irinotecan -> practical decision making - not reached.
