--- a/_posts/2016-06-14-2016-KSCPT.md
+++ b/_posts/2016-06-14-2016-KSCPT.md
@@ -3,7 +3,7 @@ title: Precision Medicine & Clinical Pharmacology
 layout: post
 ---
 
-# 2016 KSCPT | Precision Medicine & Clinical Pharmacology
+# 2016 KSCPT , Precision Medicine & Clinical Pharmacology
 
 ## Opening Remark
 - Yil-Seob Lee (president of KSCPT)
@@ -23,7 +23,7 @@ layout: post
   1. Umbrella trial (single tumor - multiple arm - multiple drugs)
   2. Basket study
 - Support of humen genetic evidence for approved drug indication (Nature Genetics)
-- Sclerosteosis - skeletal overgrowth and syndactyly, AR | mutations in SOST gene - target sclerostin
+- Sclerosteosis - skeletal overgrowth and syndactyly, AR , mutations in SOST gene - target sclerostin
   - anti-sclerostin Ab (ROMOSOZUMAB, BLOSOZUMAB) - bone density increase - mouse
 - New cardiovascular targets
   - PCSK9 - GOF->LDL-C increase & CVD
@@ -54,13 +54,13 @@ layout: post
 - ASCO meeting - CTx vs Targeted therapy - Umbrella study
 - Drug labeling "FDA-approved test"
 - XALKORI - Crizotinib and ALK
-- CPT Feb 2016 - Precision Medicine | "Companion Diagnostics" Something unique to conduct | "Complementary diagnostics"
-- Eliglustat and CYP2D6 | Drug labeling
+- CPT Feb 2016 - Precision Medicine , "Companion Diagnostics" Something unique to conduct , "Complementary diagnostics"
+- Eliglustat and CYP2D6 , Drug labeling
 - Center for Device
 - Integral to the future of personalized or precision medicine
 - NGS
 - PrecisionFDA initiative
-- 23andMe - Drug response | Confidence
+- 23andMe - Drug response , Confidence
 - Cleared or approved FDA
 - CLIA-certified laboratory
 
@@ -73,7 +73,7 @@ layout: post
 - 60% (explanble) vs 40% (how about this?) - superorganism
 - 400 different species (~1.5kg)
 - Haiser (2012, Science) Gut microbe - drug, host interaction
-- TOC: 1 DMD paper |  2 in-house project
+- TOC: 1 DMD paper ,  2 in-house project
 - DMD - reduction, hydrolysis
 - absorption - simvastatin - poor responder, average, good 10% 80% 10%
 	- OATP1B1 in liver and intestine
@@ -158,7 +158,7 @@ layout: post
 - Immunity to CYP1B1 -> Clinical benefit
 - 과발현시 - PCNA increased
 - TMS - specific human CYP1B1 - DMBA->PPCNA increased, DMBA+TMS->PBNA back to normal
-- CYP1B1 -> EMT (ECADHERIN, ZEB1, Vimentin, twist1 ) FUNCTIONAL STUDY | Can we transmembrane migration - cancer progression
+- CYP1B1 -> EMT (ECADHERIN, ZEB1, Vimentin, twist1 ) FUNCTIONAL STUDY , Can we transmembrane migration - cancer progression
 - SP1 Transctiption factors - Mithramycin A(binding inhibittor) DMBA에의해 증가한 에스피1등이 mitA를 억제.
 - 이러한 결과들을 통해서 SP1이 암 증식 chip assay
 - 4OHE는 EMT 촉진된다.
@@ -169,7 +169,7 @@ layout: post
 ### 16:50~17:20	omics for precision Medicine : Clinical Implementation in oncology
 - Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)
 - effects are not immediate / severe adverse effects / narrow therapeutic window
-- UGT1A1 genotypes - different enzyme activities | Irinotecan
+- UGT1A1 genotypes - different enzyme activities , Irinotecan
 - Irinotecan -> practical decision making - not reached.
 - genotype information - strong enough?
 - neutropenia, diarrhea
