--- a/_posts/2016-06-14-2016-KSCPT.md
+++ b/_posts/2016-06-14-2016-KSCPT.md
@@ -3,7 +3,7 @@ title: Precision Medicine & Clinical Pharmacology
 layout: post
 ---
 
-# 2016 KSCPT , Precision Medicine & Clinical Pharmacology
+# 2016 KSCPT
 
 ## Opening Remark
 - Yil-Seob Lee (president of KSCPT)
