--- a/_posts/2016-06-17-AMIS.md
+++ b/_posts/2016-06-17-AMIS.md
@@ -46,7 +46,7 @@ AIMS
 * Big data and research - Brigham and Women's - Pathology ePath, Immunology Big data Genomic platform
 * Essential for future approach
 * RPDR - New entity at partners healthcare = CMS, biobank, survey data, imaging, notes repo
-*
+* Big data in clinical care
 
 
 
