--- a/_posts/2016-06-17-AMIS.md
+++ b/_posts/2016-06-17-AMIS.md
@@ -6,14 +6,15 @@ layout: post
 http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572
 http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do
 
-
-"Translation and Convergence for Future Medicine"
+# "Translation and Convergence for Future Medicine"
  (미래 의학을 위한 중개 및 융합연구)
+
 2016 아산국제의학심포지엄
 Asan International Medical Symposium 2016
 - Innovative Future for Medical Science & Technology -
 2016년 6월 17일 (금) 서울아산병원 동관 6층 대강당 외
 AIMS
+
 - This is a conceptual full day scientific program. The actual scientific program may be modified -
  Time Lecture Title Speaker Venue
 08:20 ~ 등 록
@@ -21,7 +22,8 @@ AIMS
  개회사 김병식 (서울아산병원 교육부원장)
  환영사 박성욱 (서울아산병원장)
  축 사 이윤성 (대한의학회장)
-09:15 ~ 15:00 Plenary Session [대강당]
+
+## 09:15 ~ 15:00 Plenary Session [대강당]
  Plenary Session I "해외유수기관의의료산업화모델" Chairperson :이정신(서울아산병원종양내과교수)
 09:15 ~ 11:30 Lecture 1 :의료 산업화를 위한 오송첨단의료복합단지의 전략 선 경 (오송첨단의료산업진흥재단 이사장)
  Lecture 2 :카롤린스카 연구소의 산 · 학 · 연 혁신모델 Alexander von Gabain (Karolinska Institute, Sweden)
@@ -30,11 +32,13 @@ AIMS
  선 경 (오송첨단의료산업진흥재단), Alexander von Gabain (Karolinska Institutet), 이정신 (서울아산병원), Benjamin Seet (A*STAR Biomedical Research Council),
  정기택 (경희대학교 경영학과)
 12:10 ~ 13:30 Lunch
- Plenary Session II "의료기술및 R&D 변화의최신동향" Chairperson :김청수(서울아산병원비뇨기과교수)
 
 
-## 13:30 ~ 15:00 Lecture 1 :의료분야에서의 빅데이터 :임상연구 및 진료를 위한 애널리틱스의 활용 David W. Bates (Harvard University, Brigham and Women's Hospital, USA)
-* rising costs
+# Plenary Session II "의료기술및 R&D 변화의최신동향" Chairperson :김청수(서울아산병원비뇨기과교수)
+
+### 13:30 ~ 14:15 Lecture 1 :의료분야에서의 빅데이터 :임상연구 및 진료를 위한 애널리틱스의 활용
+* Speaker: David W. Bates (Harvard University, Brigham and Women's Hospital, USA)
+* Rising costs
 * Moneyball, Boston red sox, walmart, watson
 * Big data 1M - 1giga(human genome) - 1 peta
   * EHR, Genetics, Diagnostics, Mobile devices,
@@ -47,14 +51,41 @@ AIMS
 * Essential for future approach
 * RPDR - New entity at partners healthcare = CMS, biobank, survey data, imaging, notes repo
 * Big data in clinical care
+* 5% patients ~ 50% cost
+* iCMP claims-based approach - 3000 patients
+* multiple parameters - wearable devices - continuous supervision on general care floors
+* Adverse events
+* PCORnet - not popular
+* New Sources - the trajectory of mobile apps
+* Literature Review - 7301 titles and abstracts
+* App Review - iTunes, Google Play -> possibly useful 16
+* Professional Society Review -
+* Ginger.io https://ginger.io/
+  * to drive better health outcomes through the use of passive mobile data and behavioral analytics.
+* !!! Example projects - Predictive Modeling
+* What we need to do all these
+  * Analytics tools, repo, data warehouse, epic reporting (Clarity reporting database)
+* Clinical data - ubiquitous
+* !!!!Novel sources are most likely to provide marginal improvement - social, mobile!!!!
+* Predictions / Implications
+  * Transformative as the internet
+  * Killer app - Google Maps
+
+#### Questions
+* 김규표 교수님 - Social media and health care
+* 김청수 교수님 - Government and insurance - reasonably difficult to acquire - costly.
+
+### 14:15 ~ 15:00 Lecture 2 :합성 항체에서 합성 단백질로
+- Sachdev Sidhu (University of Toronto, Canada)
+-
 
 
 
 
- Lecture 2 :합성 항체에서 합성 단백질로 Sachdev Sidhu (University of Toronto, Canada)
-15:00 ~ 15:20 Coffee Break
+
 15:20 ~ 18:00 Parallel Session [대강당외]
  Parallel Session I "의료분야에서의빅데이터" Chairperson :김태원(서울아산병원임상의학연구소장) [대강당]
+
 15:20 ~ 18:00 Lecture 1 :전자의무기록에 기반한 임상 빅데이터 연구 Alexander Turchin (Harvard University, Brigham and Women's Hospital, USA)
  Lecture 2 : 의료분야에서의 빅데이터 분석 Tom Lawry (Microsoft Corp., USA)
  Lecture 3 :생물기작 기반 암 오믹스 데이터 분석 기법 김 선 (서울대학교 생물정보연구소)
@@ -64,6 +95,7 @@ AIMS
  David W. Bates (Harvard University, Brigham and Women's Hospital), Alexander Turchin (Harvard University, Brigham and Women's Hospital), Tom Lawry (Microsoft Corp.),
  김 선 (서울대학교), 이재호 (서울아산병원), 박덕우 (서울아산병원)
  Parallel Session II "의료의새로운미래를여는융합형의공학기술" Chairperson :김송철(서울아산병원의공학연구소장) [2세미나실]
+
 15:20 ~ 18:00 Lecture 1 :영상유도 중재시술 로봇 서준범 (서울아산병원 영상의학과)
  Lecture 2 :동맥 경화증에 대한 기계생물학과 나노의학 - 체학적 접근과 신 치료법 Hanjoong Jo (Georgia Institute of Technology and Emory University, USA)
  Lecture 3 :체내 세포자원을 통한 조직재생 James Yoo (Wake Forest Institute for Regenerative Medicine, USA)
