--- a/_posts/2016-06-22-RODBC-OSX.md
+++ b/_posts/2016-06-22-RODBC-OSX.md
@@ -28,3 +28,7 @@ $ brew install freetds --with-unixodbc
 ```
 
 터미널에서 위 두줄을 실행하면 ```install.packages("RODBC")```이 문제없이 실행됩니다.
+
+![스크린샷 2016-06-22 11.13.48](http://i.imgur.com/kmFHfRD.png)
+
+댓글을 남겼습니다! ^^
