--- a/_posts/2016-06-22-RODBC-OSX.md
+++ b/_posts/2016-06-22-RODBC-OSX.md
@@ -32,3 +32,10 @@ $ brew install freetds --with-unixodbc
 ![스크린샷 2016-06-22 11.13.48](http://i.imgur.com/kmFHfRD.png)
 
 댓글을 남겼습니다! ^^
+
+
+## iODBC 설치하기
+다음 링크를 통해 iodbc를 설치합니다.
+http://www.iodbc.org/dataspace/iodbc/wiki/iODBC/Downloads#Mac OS X
+
+![스크린샷 2016-06-22 11.31.55](http://i.imgur.com/4YvXweJ.png)
