--- a/_posts/2016-06-14-2016-KSCPT.md
+++ b/_posts/2016-06-14-2016-KSCPT.md
@@ -168,6 +168,11 @@ layout: post
 - 촉진 - DMBA, CYP1B1, SP1, 4OHE
 - Matrigel, migration -> migration, invasion
 
+####
+1B1에 의해 대사되는 irinotecan - 알수가 없다. Tumor 조직을 갖고 enzyme activity 측정전에.
+active metabolism
+2D6는 steroid
+
 ### 16:50~17:20	omics for precision Medicine : Clinical Implementation in oncology
 - Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)
 - effects are not immediate / severe adverse effects / narrow therapeutic window
