--- a/_posts/2016-06-17-AMIS.md
+++ b/_posts/2016-06-17-AMIS.md
@@ -2,39 +2,17 @@
 title: Translation and Convergence for Future Medicine (미래 의학을 위한 중개 및 융합연구)
 layout: post
 ---
-![](http://aims.amc.seoul.kr/asan/imageDown/homebuilder/20160527?fileName=Scientific-Program-kor.jpg)
-http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572
-http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do
 
 # "Translation and Convergence for Future Medicine"
- (미래 의학을 위한 중개 및 융합연구)
 
-2016 아산국제의학심포지엄
-Asan International Medical Symposium 2016
+- 미래 의학을 위한 중개 및 융합연구
+- Asan International Medical Symposium 2016
 - Innovative Future for Medical Science & Technology -
-2016년 6월 17일 (금) 서울아산병원 동관 6층 대강당 외
+- 2016년 6월 17일 (금) 서울아산병원 동관 6층 대강당 외
 AIMS
 
-- This is a conceptual full day scientific program. The actual scientific program may be modified -
- Time Lecture Title Speaker Venue
-08:20 ~ 등 록
-09:00 ~ 09:15 개회식 MC :조유숙(서울아산병원연구기획관리실장) [대강당]
- 개회사 김병식 (서울아산병원 교육부원장)
- 환영사 박성욱 (서울아산병원장)
- 축 사 이윤성 (대한의학회장)
-
-## 09:15 ~ 15:00 Plenary Session [대강당]
- Plenary Session I "해외유수기관의의료산업화모델" Chairperson :이정신(서울아산병원종양내과교수)
-09:15 ~ 11:30 Lecture 1 :의료 산업화를 위한 오송첨단의료복합단지의 전략 선 경 (오송첨단의료산업진흥재단 이사장)
- Lecture 2 :카롤린스카 연구소의 산 · 학 · 연 혁신모델 Alexander von Gabain (Karolinska Institute, Sweden)
- Lecture 3 : The Biopolis Story :싱가폴 의생명 산업의 창조 Benjamin Seet (A*STAR Biomedical Research Council, Singapore)
-11:30 ~ 12:10 Panel Discussion Chairperson :김종재(서울아산병원연구원장)
- 선 경 (오송첨단의료산업진흥재단), Alexander von Gabain (Karolinska Institutet), 이정신 (서울아산병원), Benjamin Seet (A*STAR Biomedical Research Council),
- 정기택 (경희대학교 경영학과)
-12:10 ~ 13:30 Lunch
-
-
-# Plenary Session II "의료기술및 R&D 변화의최신동향" Chairperson :김청수(서울아산병원비뇨기과교수)
+## Plenary Session II "의료기술및 R&D 변화의최신동향"
+* Chairperson :김청수(서울아산병원비뇨기과교수)
 
 ### 13:30 ~ 14:15 Lecture 1 :의료분야에서의 빅데이터 :임상연구 및 진료를 위한 애널리틱스의 활용
 * Speaker: David W. Bates (Harvard University, Brigham and Women's Hospital, USA)
@@ -76,108 +54,75 @@ AIMS
 * 김청수 교수님 - Government and insurance - reasonably difficult to acquire - costly.
 
 ### 14:15 ~ 15:00 Lecture 2 :합성 항체에서 합성 단백질로
-- Sachdev Sidhu (University of Toronto, Canada)
--
+* Sachdev Sidhu (University of Toronto, Canada)
+* The Donnelly Centre - From systems biology to systematic treatment
+* Therapeutic antibody revolution - highly versatile, numorous diseases
+* Ab-durg conjugates, fragment, bispecific, engineered cells
+* Targeting cancer with antibodies
+* !!! problem - small populations - boutique treatment!!!
+* In vitro protein evolution
+* Affinity, specificity enhanced
+* Antibody molecules
+* binding site of Ab
+* highly optimized - automatic mutation of binding site
+* Toronto Synthetic Antibody Library - highly diverse - Herceptin
+* PHAGE - Genentech
+* only changed the function, not others
+* Functional genomics - **Large-scale, industry-quality Ab generation** - Preclinical biology | The middle was not quite available but now it's doable.
+* Cancer Antibody TRAC antibodies - bacerial pathogens
+* High yield and high affinity Fabs from naive library - 1394 total against 80 targets
+* http://sites.utoronto.ca/sidhulab/about.html
+* natural - synthetic Ab - synthetic proteins - synthesizable proteins
+* D-protein therapeutics.- samll proteins synthesized entirely rom D-amino acids, Ab like affinity, specificity and stability,
+* in vitro d-protein advantages - longer circulating HL than L-proteins - less immunogenicity - ersistant to metabolism in plasma
 
+## Parallel Session I "의료분야에서의빅데이터" Chairperson :김태원(서울아산병원임상의학연구소장) [대강당]
+15:20 ~ 18:00
 
+### Lecture 1 :전자의무기록에 기반한 임상 빅데이터 연구 Alexander Turchin (Harvard University, Brigham and Women's Hospital, USA)
+- Data warehouse : integrates data from multiple sources - i2b2 | ABLE | OHDSI
+- who entered the data? Wrong input to public repo (DKA for 2 years!)
+- Data quality
+- Raynaud's syndrome - Omega3 (Failure)
 
+### Lecture 2 : 의료분야에서의 빅데이터 분석 Tom Lawry (Microsoft Corp., USA)
+- 8 seconds = Concentration time
+- Analytics Convergence Zone - Clinical data, Geo/Social/Environmental data/Claims&Cost Data/Pharma&Life Sience Data, Patient & Citizen Data
+- https://powerbi.microsoft.com/ko-kr/ !!!!! 반드시 사용해 볼것. 좋은 Visualization.
+- http://www.ciokorea.com/news/29118
 
+### Lecture 3 :생물기작 기반 암 오믹스 데이터 분석 기법
+- speaker: 김 선 (서울대학교 생물정보연구소)
+- https://sites.google.com/site/biohealthinformaticslab/sun-kim
+- http://bioinfo.snu.ac.kr/main/index.php
+- DNA, RNA, Protein이 중요 - Somatic mutation뿐만 아니라
+- Transcriptome (RNA-sequencing data)
+  - 싸고 쉽다.
+  - 그에 비해 Underestimated되어 있다.
+- Breast cancer
+  - 가장 잘 알려진 암종.
+  - 21-gene Oncotype DX !!! http://www.oncotypedx.com/
+  - PAM50 - Prediction analysis of microarray by 50 gene classifier !!! - Survival 예측하는 Gold-standard
+- Transcriptome Data analysis http://prosigna.com/x-us/overview/
+- Pathway (context) analysis는 과연 informative한가?
+  - A Critical Evaluation of Network and Pathway-Based Classifiers for Outcome Prediction in Breast Cancer (PLoS One 2012) http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0034796
+  - 50개를 랜덤하게 취해도 유의미하게 나왔다. 아무거나 취해도 유의미하게 만들 수 있다. (Negative result!)
+  -  "Based on these results there is currently no reason to prefer prognostic classifiers based on composite features over single genes classifiers for predicting outcome in breast cancer."
+  - 따라서 50개를 정할 때 기능적인 면을 고려해야 한다.
+- PPI-based Pathway Decomposition !!! - 우리의 분류를 기반으로 Survival plot를 그리면 확연한 차이가 난다.
+- Decomposed pathway and its activity measurement Using RNA-sequencing data
+- 이러한 알고리듬으로 RNA-sequencing data 분석 (1138개의 sample을 사용)
+  - TCGA data (Breast Cancer)
+  - 기본적으로 information theory를 응용한 것이다.
+  - Subtype과 발현량의 ranking에 따라 score를 매긴 후 distinguishing할 수 있다.
+  - 클래스마다 차이가 확연한 Subnetwork A는 좋은 모델
+  - 클래스마다 차이가 없으면 Subnetwork C는 나쁜 모델. 우리는 좋은 모델을 택해야 한다.
+- **Top10 Regulated pathways by TF/miRNA**
+- mir-30a (basal cell cycle activation) -> mir-149, let-7b, mir-30a
+- Sub-network mining approach
+- Experimental validation requires collaborators who enjoy new approaches.
+  - 혹시 talk를 들으시고 관심있으면 Contact.
 
-15:20 ~ 18:00 Parallel Session [대강당외]
- Parallel Session I "의료분야에서의빅데이터" Chairperson :김태원(서울아산병원임상의학연구소장) [대강당]
-
-15:20 ~ 18:00 Lecture 1 :전자의무기록에 기반한 임상 빅데이터 연구 Alexander Turchin (Harvard University, Brigham and Women's Hospital, USA)
- Lecture 2 : 의료분야에서의 빅데이터 분석 Tom Lawry (Microsoft Corp., USA)
- Lecture 3 :생물기작 기반 암 오믹스 데이터 분석 기법 김 선 (서울대학교 생물정보연구소)
- Lecture 4 : ABLE 시스템 :그 경험과 미래 이재호 (서울아산병원 의생명정보학과)
- Lecture 5 :빅데이터를 활용한 심혈관 분야의 최신 연구 박덕우 (서울아산병원 심장내과)
- Panel Discussion
- David W. Bates (Harvard University, Brigham and Women's Hospital), Alexander Turchin (Harvard University, Brigham and Women's Hospital), Tom Lawry (Microsoft Corp.),
- 김 선 (서울대학교), 이재호 (서울아산병원), 박덕우 (서울아산병원)
- Parallel Session II "의료의새로운미래를여는융합형의공학기술" Chairperson :김송철(서울아산병원의공학연구소장) [2세미나실]
-
-15:20 ~ 18:00 Lecture 1 :영상유도 중재시술 로봇 서준범 (서울아산병원 영상의학과)
- Lecture 2 :동맥 경화증에 대한 기계생물학과 나노의학 - 체학적 접근과 신 치료법 Hanjoong Jo (Georgia Institute of Technology and Emory University, USA)
- Lecture 3 :체내 세포자원을 통한 조직재생 James Yoo (Wake Forest Institute for Regenerative Medicine, USA)
- Lecture 4 : 3D 프린팅 기술과 생물의학적 적용 조동우 (포스텍(POSTECH)기계공학과)
- Lecture 5 :식도스텐트 개발 : 8세대까지의 시행착오 송호영 (서울아산병원 영상의학과)
- Panel Discussion
- Hanjoong Jo (Georgia Institute of Technology and Emory University), James Yoo (Wake Forest Institute for Regenerative Medicine),
- 조동우 (포스텍), 송호영 (서울아산병원), 서준범 (서울아산병원)
- Parallel Session III "기초연구에서치료제의개발로" Chairperson :명승재(서울아산병원의생명연구소장) [소강당]
-15:20 ~ 18:00 Lecture 1 :고속대량 생물학을 위한 합성 항체 Sachdev Sidhu (University of Toronto, Canada)
- Lecture 2 :핵산서열을 기반으로 한 진단 및 치료제의 개발 박한오 (㈜바이오니아)
- Lecture 3 :단백질 의약품 개발의 최신 동향 이소라 (㈜애브비)
- Lecture 4 :종양 진행에서 L1CAM 단백질의 역할 및 단일클론 항체의 치료제로서의 가능성 홍효정 (강원대학교 시스템면역과학과)
- Lecture 5 :약물 간 상호작용과 이에 대한 단백질 약물 개발에의 적용 송윤정 (㈜사노피 아벤티스 코리아)
- Lecture 6 :재조합 단백질의 원핵생물에서의 효과적 생산 및 새로운 단백질 의약품의 개발 최한석 (서울아산병원 생리학교실)
- Lecture 7 :식물을 이용한 백신과 항체 생산:응용 및 전망 고기성 (중앙대학교 의과대학 의학부)
-연수 평점 대한의사협회 6점 등록 방법 온라인 접수 (aims.amc.seoul.kr)
-등록 마감 6월 10일(금) 까지 문 의 아카데미운영팀 한도영 주임, Tel. 02-3010-7050 주 관 아산생명과학연구원
-Asan Institute for Life Sciences
-AIMS
-Asan International
-Medical Symposium 2016
-- Innovative Future for Medical Science & Technology -
-Friday 17 June 2016 Asan Medical Center, Seoul, Korea
- Time Lecture Title Speaker Venue
-08:20 ~ Registration
- [Grand Auditorium]
-09:00 ~ 09:15 Opening Ceremony MC : You Sook Cho (Director, Office for Scientific Planning and Coordination, AMC, Korea)
-Opening Message Byungsik Kim (Vice President & Chief Education Officer, AMC, Korea)
-Welcome Message Seong-Wook Park (President & CEO, AMC, Korea)
-Congratulatory Message Yoon-Seong Lee (President, Korean Academy of Medical Sciences, Korea)
-09:15 ~ 15:00 Plenary Session [Korean-English Simultaneous Interpretation]
-Plenary Session I "Learning from the Pioneering Models of Healthcare Industry" Chairperson : Jung Shin Lee (Dept of Oncology, AMC, Korea)
-10:00 ~ 11:30 Lecture 1 : Osong Cluster for Medical Industrialization in Korea Kyung Sun (Osong Medical Innovation Foundation, Korea)
-Lecture 2 : Unlocking the innovation potential of the Karolinska Institute Alexander von Gabain (Karolinska Institutet, Sweden)
- - towards an entrepreneurial University
-Lecture 3 : The Biopolis Story : Creating Singapore’s biomedical industry Benjamin Seet (A*STAR Biomedical Research Council, Singapore)
-11:30 ~ 12:10 Panel Discussion Chairperson : Chong Jai Kim
- (Chairman, Asan Institute for Life Sciences & Chief Research Officer, AMC, Korea)
- Kyung Sun (Osong Medical Innovation Foundation), Alexander von Gabain (Karolinska Institutet), Jung Shin Lee (AMC),
- Benjamin Seet (A*STAR Biomedical Research Council), KeeTaig Jung (Dept of Business Administration Kyun Hee University)
-12:10 ~ 13:30 Lunch
-13:30 ~ 15:00 Plenary Session II "Recent "Wind of Change" in Healthcare Technology" Chairperson : Choung Soo Kim (Dept of Urology, AMC, Korea)
-Lecture 1 : Big Data in Health Care: Using Analytics for Research and Clinical Care David W. Bates (Harvard University, Brigham and Women's Hospital, USA)
-Lecture 2 : From Synthetic Antibodies to Synthetic Proteins Sachdev Sidhu (University of Toronto, Canada)
-15:00 ~ 15:20 Coffee Break
-15:20 ~ 18:00 Parallel Session
- [Grand Auditorium]
- Parallel Session I “Big Data in Healthcare” [English] Chairperson : Tae Won Kim (Chief Director, Clinical Research Center, AMC, Korea)
-Lecture 1 : Electronic Medical Record-based Clinical Big Data Research Alexander Turchin (Harvard University, Brigham and Women's Hospital, USA)
-Lecture 2 : Big data in Health – Analytics Tom Lawry (Microsoft Corp., USA)
-Lecture 3 : Pathway-based analysis of omics data for cancer research Sun Kim (Dept of Biomedical Informatics, Seoul National University, Korea)
-Lecture 4 : The ABLE: The Experience and The Future Jae ho Lee (Dept of Biomedical Informatics, AMC, Korea)
-Lecture 5 : The Latest in Cardiovascular Scientific Research using Big Data Duk-Woo Park (Dept of Cardiology, AMC, Korea)
-Panel Discussion
- Tom Lawry (Microsoft Corp.), David W. Bates (Harvard University, Brigham and Women's Hospital), Alexander Turchin (Harvard University,
- Brigham and Women's Hospital), Sun Kim (Seoul National University), Jae ho Lee (AMC), Duk-Woo Park (AMC)
- [Seminar Room 2]
-Parallel Session II “Convergent Biomedical Engineering” [English/Korean] Chairperson : Song-Cheol Kim (Chief Director, Biomedical Engineering Research Center, AMC, Korea)
-Lecture 1 : Introduction of image-guided intervention robot system Joon Beom Seo (Dept of Radiology, AMC, Korea)
-Lecture 2 : Mechanobiology and Nanomedicine in Atherosclerosis Hanjoong Jo (Georgia Institute of Technology, Emory University, USA)
- – OMICs approaches and novel therapeutics
-Lecture 3 : In Situ Tissue Regeneration: An Emerging Concept in Regenerative Medicine James Yoo (Wake Forest Institute for Regenerative Medicine, USA)
-Lecture 4 : 3D Printing Technology and its Biomedical Applications Dong-Woo Cho (Dept of Mechanical Engineering,
- Pohang University of Science and Technology(POSTECH), Korea)
-Lecture 5 : Evolution of Esophageal Stents: 8 Generations of Trial and Error Ho Young Song (Dept of Radiology, AMC, Korea)
-Panel Discussion
- Hanjoong Jo (Georgia Institute of Technology and Emory University), James Yoo (Wake Forest Institute for Regenerative Medicine),
- Dong-Woo Cho (POSTECH), Ho Young Song (AMC), Joon Beom Seo (AMC)
- [ Auditorium]
-Parallel Session Ⅲ “Bringing Molecules to the Bedside” [Korean] Chairperson : Seung Jae Myung (Chief Director, Biomedical Research Center, AMC, Korea)
-Lecture 1 : Synthetic Antibodies for High-Throughput Biology Sachdev Sidhu (University of Toronto, Canada)
-Lecture 2 : Development of sequence-based diagnostics and therapeutics Han-Oh Park (BIONEER, Inc., Korea)
-Lecture 3 : Current development trends on BTP(Biotherapeutic products) Sora Lee (AbbVie, Inc., Korea)
-Lecture 4 : The role of L1CAM in tumor progression and therapeutic potential of Hyo Jeong Hong (Dept of Systems Immunology, Kangwon National University, Korea)
- anti-L1CAM monoclonal antibodies
- Lecture 5 : Therapeutic Protein-Drug Interaction and Its Implication on Yun-Jeong Song (Sanofi-Aventis Korea Co., Asia-Pacific R&D, Korea)
- Protein Drug Development
- Lecture 6 : Efficient prokaryotic recombinant protein production and Han S Choe (Dept of Physiology, AMC, Korea)
- development of new protein drugs
-Lecture 7 : Plant-based vaccine and antibodies: its application and perspectives Kisung Ko (College of Medicine, Chung-Ang University, Korea)
-- This is a conceptual full day scientific program. The actual scientific program may be modified -
-Hosted by Asan Institute for Life Sciences Registration http://aims.seoul.kr Deadline Friday 10 June 2016
-"Translation and Convergence for Future Medicine"
-"Translation and Convergence for Future Medicine"
+ ![](http://aims.amc.seoul.kr/asan/imageDown/homebuilder/20160527?fileName=Scientific-Program-kor.jpg)
+ http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572
+ http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do
