--- a/_posts/2016-06-24-ACREP.md
+++ b/_posts/2016-06-24-ACREP.md
@@ -1,10 +1,13 @@
+---
 title: 2016 ACREP
 layout: post
 ---
 
 # ACREP
-##
-Speaker 이무송
+## Observational Study
+* Speaker 이무송
+
+### Contents
 * Cohort study
 * RR $$ \frac{\frac{a}{a+b}}{\frac{c}{c+d}} $$
 * 단점 - F/U loss, 재발에 대해서 연구 어렵다.
@@ -12,7 +15,9 @@ Speaker 이무송
 * PCORI.org - conduct of Registry
 * Cohort는 F/U을 전제로 해서 한다. Retrospective Chart-review
 
-## 임영석
+## Observational Study의 Pitfall 및 이를 극복하기 위한 방법
+* Speaker: 임영석 교수님
+
 ### Experimental study? Yes
 #### Randomized design? (interventional)- No
 * NR CLINICAL trial
@@ -72,3 +77,21 @@ Speaker 이무송
 * What is the effect of long-term tx(>5y) with a potent oral antiviral agent(entecavir)(I) in patients with chronic hep B(P)
 * FDA, 식약처는 Surrogate marker를 가지고 허가를 내준다. (조직학적 개선,) - 이것과 환자의 outcome을 정말로 개선시키는건가? 이건 observational study에서만 찾을 수 있다. historical cohort
 * Zero time No treatment control
+* Endpoint ascertainment - 재발이 문제가 된다. 무엇으로 재발을 판정할 것인가? MR? CT? 검사간격을 얼마로 했니? 누구도 시비 못할 것으로 outcome measure하는 것이 좋다. (예를 들어 사망의 경우)
+* PP vs ITT
+  * ITT - which treatment option is best at the time decision must be made? - FDA에서 ITT만 인정을 한다.
+  * Explanatory
+* Multivariable Cox PH Analysis - (Event 수를 적어야 한다.) Univariate analysis만으로는 부족.
+* Multivariate analysis -
+* Propensity score - SPSS로 가능. 양군간 matching - 쌍을 갖춘다. 같은 수로 나온다. 이때는 univariate할 수 있다.
+* "consistently observed by unadjusted."  - obs study는 의심을 많이 받기 때문에. 이런 분석을 하는 것이 좋다.
+* Gadoxetic - liver specific contrast agent
+  * 2647patients->700명 수술 가능. - surrogate marker - CT에서 못본걸 MR에서 찾았다. | Cost-effectiveness - 무조건 survival. Propensity matching - Inverse Probability Weighing (IPTW)
+    1. Unadjsted
+    2. mutivariable
+    3. IPTW
+    4. Propensity
+  * 제목의 중요성. JCO (IF 21) - Hepatology (IF 11.7) - Gut (IF 14.921) (early rejection so far) - GE (IF 18.187) (accepted with more general terms in the title)
+
+### Conclusion
+* mimic as closely as possible in RCT
