--- a/_posts/2016-06-23-CD19-CAR-T.md
+++ b/_posts/2016-06-23-CD19-CAR-T.md
@@ -3,9 +3,9 @@ title: CD19-Targeted CAR T Cells in Haematologic malignancies
 layout: post
 ---
 
-Speaker: Jae Park, MD / Memorial Sloan Kettering Cancer Center | ALL CLL NHL
+Speaker: Jae Park, MD / Memorial Sloan Kettering Cancer Center | Specialized in ALL CLL NHL
 
-CD19-Targeted CAR T cells
+## CD19-Targeted CAR T cells
 
 ### Contents
 
@@ -15,6 +15,11 @@ CD19-Targeted CAR T cells
 * MHC presentation해서 보는게 아니라 Ab처럼 binding하지만 Action은 T cell
 * 두개를 합친것. 어떻게 clinic에 사용할 것인가?
 * Stable expression할 수 있다.
+
+
+![Process](https://www.mskcc.org/sites/default/files/styles/large/public/node/39453/image/msk402-cartcell-infographic327.jpg)
+https://www.mskcc.org/blog/car-t-cell-therapy-growing-area-research
+
 * Average 60%정도 replication하는 동안은 CAR expression.
 * Tumor antigen을 CAR T Cell이 보게 되면서 죽이게 된다.
 * Target selection
@@ -44,11 +49,48 @@ CD19-Targeted CAR T cells
   * 소아라서 Quality가 다를 수 있는 확률이 있어.
 * CRS - fever, hypotension, resp insufficiency - 7일정도
 * Neurological changes - delirium, global encephalopathy, aphasia, seizure-like activities/seizure
+* disease burden 많으면 severe CRS - correlation이 있다.
+* CRP - IL-6 release 높아져.
+  * [Tocilizumab](https://en.wikipedia.org/wiki/Tocilizumab )
+    * humanized monoclonal antibody against the interleukin-6 receptor (IL-6R). Interleukin 6 (IL-6) is a cytokine that plays an important role in immune response and is implicated in the pathogenesis of many diseases, such as autoimmune diseases, multiple myeloma and prostate cancer.
+  * Steroid
 
+### Summary
+* High CR rates can be achieved in both adults and children with R/R B-ALL
+* Durable response - no subsequent allo-SCT
+* CRS - mc AE a/w CD19 CAR T cells - toci, steroid
+* Neurotoxicity - difficult
 
+### Additional comments
+* The hostile Tumor microinvironment
+* Armored CARs
+  * genetic modification - IL12, CD40L
+  * PD-1 K/O할수도 있고..
+* IL-12
+  * IL-12 pro-inflammatory - IV infusion힘들어.
+  * IL-12 secretion-> NK cells & Anergic TIL ->
+* CD40L
+  * Armored CD40L CAR
+
+### For the future
+* Less cumbersome, 3rd party, 더 강한 Tc, solid tumor에서 적용,
+
+### Conclusions
+* Autologous CD19-Targeted
+* High response rate이지만 perfect하지 않음
+* 왜 resistance일어나는지?
+* CLL, ALL 다른점 무엇인지?
+* heme malignancies-> applicability 있는지? solid tumor로 갈수 있을지?
+* target selection
 
 ### My Question
-Dynabeads를 통해 polyclonal activation된 후
+Dynabeads를 통해 polyclonal activation된 후 filter할 수 없나?
+
+### Questions
+* Car T cell in CSF - Yes
+* 41BB PD-1
+
+![enter image description here](http://www.danafarberbostonchildrens.org/uploadedimages/content/page_content/news/2015/dfc_7706_car_t-cell_infographic_branded-2.jpg)
 
 ### Reference
 * Park J. et al. ASH 2015, Abstract 682
