ACREP UPDATE the latter part

--- a/_posts/2016-06-24-ACREP.md
+++ b/_posts/2016-06-24-ACREP.md
@@ -1,6 +1,8 @@
 ---
 title: 2016 ACREP
 layout: post
+categories:
+  - Conference
 ---
 
 # ACREP
@@ -95,3 +97,100 @@ layout: post
 
 ### Conclusion
 * mimic as closely as possible in RCT
+
+## Diagnostic test & Biomarker Study
+* Speaker: 박성호 - 영상의학과
+
+### Contents - Diagnostic test
+* DTA sutdy
+* Prevalence낮으면
+* 횡으로 본다. Predictive Value - Prevalence에 영향을 받는다. Pre올라가면 PPV올라가. NPV낮아져.
+* odds ratio - prevalence에 영향을 안받는다. intrinsic parameter로 많이 씀.
+* case-control study vs cross-sectional study [옛날 용어]
+* Cochrane - case-control type accuracy study vs cohort type accuracy study
+* NECA - diagnostic case-control study vs diagnostic cohort study
+* Area under ROC curve - C statistics
+* Youden index - sens spec 더해서 빼기 1 Youden J statistic
+* Least Euclidean distance from (0,1) 거리가 최소되는 점. - 쉬운개념
+* diagnostic accuracy - 시각적으로 어떻게 구성하는지가 중요함.
+* McNemar test
+* Comparing two proportions (2x2) - unpaired(fisher,Chi2), paired (McNemar)
+
+### Contents - Biomarker
+* Biomarker
+	* Classifier / Prognostic / Predictive / Monitoring
+* Petal et al. MRI-detected tumor response for locally advanced rectal cancer predicts survival outcomes
+* Machtay et al. Prediction of survival
+	* Prospective
+	* S III lung cancer eligible for CCRT
+	* Endpoint : overall survival
+	* SUV
+* Hylton et al.
+	* Prospective
+	* Index: functional tumor volume measured with pre-surgery breast MRI
+	* Comparator: post-surgical pathologic complete response(PCR)
+	* Modified C-statistics(ROC) - diagnosis는 있다 없다로 나온다. survival은 time to event - 각각의 time point마다 diagnosis 유사한 통계량이 나와서 그걸 summation
+* Studies of predictive accuracy
+	* Two approaches - Time-to-event / event by a fixed time
+	* Event by a fixed time - Sn Sp ROC - Accuracy study와 유사한 것으로 된다.
+* 더 impact있는 것. - randomization을 테스트 후에 할 것인가 아니면 전에 할 것인가? 전에 하는 것이 더 임팩트 있다. 왜냐하면 테스트(+)이면 치료 들어가는 경우가 많기 때문이다.
+* 후자에 해당하는 (더 임팩트있는) 스터디의 예.
+* Monitoring biomarker
+	* Correlation between x and y / delta x and delta y
+	* Delta를 보는 것이 중요하다.
+
+## 2차 자료원을 이용한 역학 연구군
+* Speaker: 예방의학교실/의학통계학과 김화정
+* NEJM 2006, BMI and mortality
+* 이차자료원 : 특정한 연구목적으로 수집되지 않은 자료
+* 공공데이터 - 정부
+* 국건영 심평원 자료 - 생각보다 manage하기 쉽지 않다.
+* HIRA DB - 건강보험청구자료
+* NHISS 국민건강보험자료 공유서비스
+* 보건의료 연구에 활용되는 공공데이터
+* 장점 : 대규모자료, 장기간 추적관찰. 시간과 비용 절약
+* 한국형 - outcomes Research
+* NECA에서 자료를 연계해 주겠다 라고 했으나.. 진전이 크지 않음
+* 보건의료 빅데이터 개방시스템 - 공공데이터
+* 명세서 일반내역 테이블
+* 2차자료의 분석은 case-control의 기준 정하기가 어렵다. 금방 분석이 되기 힘듬. Crossvalidation 반드시 해야함.
+* 과제신청 - 연구원등록 : 정부3.0에서 검토 자세히 하게됨.
+* SAS/R 프로그램.
+* 단점 - 5년간의 자료. F/U보기가 힘들어. 진단명의 정확도 문제 - 70%. 에러의 숫자가 클 수 있음.
+* 의학통계학과 공공데이터 연구지원 #4639 - 상담, 공공데이터 이용신청, 자료확보, 자료분석, 결과검토
+* NHISS 표본연구
+* Dramatic decrease in FQ in the pediatric population
+* case crossover design
+* indication bias - causality - association. confounding by indication
+
+## 대규모 이차 자료원을 이용한 clinical prediction model : individual risk/outcome probability 예측 분석법
+* Clinical prediction model
+* Framingham risk score
+* JAMA - moving from clinical trials to precision Medicine, 2016 Apr 26
+* DAPT Trial
+* Risk for advanced neoplasia and  likelihood ratios in each risk group within derivation and validation sets
+[Derivation and validation of a scoring system to stratify the risk of advanced colorectal neoplasia in asymptomatic adults](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4840411/#!po=38.6364
+)  분자:질병있는 / 분모:질병없는 - likelihood ratio
+* Assumptions for model development - linear regression, Cox proportional hazard regression(Proportionality of hazard ### This should be confirmed.)
+
+| | linear reg | logi reg| Cox reg|
+|-|-|-|-|
+|Overall perf| R2 | Nagelkerke r2, brir|the same|
+|discrimination ability||C concordance stat(AUC)|Harell C stat, time-dependent AUC|
+|Calibratrion|Calibration plot, slope|the same+hosmer-lemeshow|the same|
+
+* C-index 를 사용하여 분석 가능함.  C = number of concordant pairs + 0.5/~~
+* 새로운 통계 지표. 2가지. NRI - net eclassification improvement
+* Korean J Radiol 2016;17(3);339-350 -> predicted probability - 사망할 확률을 계산할 수 있음.
+* Framingham그룹에서 발표됨 2008 통계 저널에
+
+### Web-r.org
+* Speaker: 문건웅 가톨릭대학교 성빈센트병원 심장내과
+
+#### Contents
+* web-r.org
+* 로지스틱 리그레션 - 반응(종속)변수 - 설명변수 . 단변량 분석 먼저 나와 univariate logistic regression
+* 다변량 분석.
+* 생존분석 - 로지스틱 회귀분석과 비슷한것임. - 다른 것은 시간개념이 들어있는 것임. 얼마 있다가 돌아가셨는지 알 수 있음. KM 분석. cutpoint결정해줌.
+* 나무분석 - 생존 나무 분석.
+* 진단통계
