--- a/_posts/2016-05-29-ODBC.md
+++ b/_posts/2016-05-29-ODBC.md
@@ -48,4 +48,4 @@ DrugB.ODBC = sqlFetch(Conc, "DrugB", as.is=TRUE)
 ## Discussion
 - R에서 Data를 불러오는 여러가지 방법 중에 가장 오래된 전통을 갖고 있습니다.
 - 안정적으로 동작합니다.
-- 그러나 64비트 개발환경을 사용할 수 없다는 점, OSX와 Linux 등에서 사용이 용이하지 않다는 점은 huddle일 수 있습니다.
+- 그러나 64비트 개발환경을 사용할 수 없다는 점, OSX와 Linux 등에서 사용이 용이하지 않다는 점은 hurdle일 수 있습니다.
