--- a/_posts/2016-06-27-ROOP.md
+++ b/_posts/2016-06-27-ROOP.md
@@ -1,9 +1,57 @@
 ---
 title: R OOP
 layout: post
+categories: DataScience
 ---
 
 R에서 객체 지향 프로그래밍: S3 기초
+
+## R OOP
+
+객체지향 S3, S4 관련 : http://adv-r.had.co.nz/S3.html
+
+Object oriented, 객체 지향 → 프로그램 단순화, 코드 재사용 용이.
+
+클래스(Class) ← 객체(멤버 변수), 메소드method(멤버 함수)
+- 클래스는 상속을 통해 계층 구조를 가짐.
+
+
+
+객체지향 S3
+
+
+
+ex) generic function - print(), summary(), plot() 등
+     method function - summary.matrix(), plot.function() 등
+
+method(함수명) : 함수명의 method함수를 조회.
+getS3method() : S3에서의 method 함수의 내용 조회..
+
+
+
+객체지향 S4
+
+setClass() : 함수 생성.
+function (Class, representation = list(), prototype = NULL, contains = character(),
+    validity = NULL, access = list(), where = topenv(parent.frame()),
+    version = .newExternalptr(), sealed = FALSE, package = getPackageName(where),
+    S3methods = FALSE, slots)
+
+getClass() : 클래스 조회. 클래스의 내용 나타냄.
+
+getSlots() : 슬롯(S4에서 멤버 벼수. @ 사용..) 종류 조회.
+
+slotNames() : 슬롯 이름 조회.
+
+validObject() : 유효성 검사.
+
+setGeneric() : S4에서 generic function 생성.
+
+setMethod() : S4에서 method function 생성.
+
+removeMethod() : method function 삭제.
+
+removeClass() : 클래스 삭제.
 
 ## Keywords
 
