--- a/_posts/2016-06-27-ROOP.md
+++ b/_posts/2016-06-27-ROOP.md
@@ -148,6 +148,79 @@ new_circle <- function(x, y, r) {
   circle
 }
 ```
+
+
+# 2016.04.22
+* Class는 허상이다.
+* 수학적인 것을 instance화하지 않는다.
+* Static Method는 인스턴스 없이도 쓸 수 있다.
+* 메써드는 다섯개여야 한다. .뒤에는 다 클래스 이름이다.
+
+S3, S4 object -> 오브젝트 S3, S4
+Reference Class -> 포인터
+
+How to use S4 object in R?
+
+Stackoverflow | Kyun
+
+Object와 함수가 분리되어 있다.
+setGeneric으로 함수 이름만 쓴다
+setMethod
+실제 book
+book1은 인스턴스이다
+
+readLines
+writeLines | 소켓과 핸들은 필요없다.
+
+===
+
+R Object-oriented Programming
+Chapter 3. Saving
+Primitive input / output :
+
+===
+
+https://namu.wiki/w/%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%20%EC%96%B8%EC%96%B4#rfn-18
+https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D?from=OOP#s-3.1
+https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/%EC%9B%90%EC%B9%99
+
+Software for data analysis - John M Chambers
+Amazon Kindle Book
+
+C S R
+
+
+Functional programming | Object-oriented programming
+
+OOP caller , callee
+
+c=a+b # call by value | 일반적인 프로그래밍
+
+메모리 할당을 받아야 한다. scope.
+
+S3, S4에 대한 것은 별로 없다.
+RC는 mutable
+
+객체 지향 언어는 프로그래밍을 함에 있어서 데이터와 그 데이터를 처리할 메소드를 한데 묶어 객체를 만들고 객체들을 조립하는 것을 목표로 한 언어들을 말한다. 객체 지향 언어의 특징은 추상화, 캡슐화, 상속성, 다형성이 있다. 추상화는 외부 인터페이스만 제공하고 객체 내부를 숨겨서 어떻게 일을 하는지 몰라도 결과를 내보낸다[12]. 캡슐화는 객체 내부에 필요한 데이터등을 묶어서 한번에 관리 할 수 있게 해준다[13]. 상속은 모객체를 상속받아 추가 기능을 더 붙이거나 약간의 수정을 가한 객체를 만들 수 있다[14]. 다형성[15]은 메소드 이름은 같더라도 타입에 따라 다른 메소드가 실행될 수 있다는 것이다.[16]
+
+Object = Class (object)|개념 + (instance) object|구체화
+
+Encapsulation | Property and Method | object는 encap하고 일부만 노출됨
+
+Inheritance
+
+Polymorphism
+
+Factor | Level = 색깔 | 노랑
+
+break 하면 도수분포표를 나눌 수 있다.
+summary
+
+===
+
+attribute | name of vector 순서가 있다.
+
+
 ### 참고
 - http://adv-r.had.co.nz/S3.html
 - http://en.wikipedia.org/wiki/Generic_function
