--- a/_posts/2016-06-27-ROOP.md
+++ b/_posts/2016-06-27-ROOP.md
@@ -180,11 +180,6 @@ R Object-oriented Programming
 Chapter 3. Saving
 Primitive input / output :
 
-===
-
-https://namu.wiki/w/%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%20%EC%96%B8%EC%96%B4#rfn-18
-https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D?from=OOP#s-3.1
-https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/%EC%9B%90%EC%B9%99
 
 Software for data analysis - John M Chambers
 Amazon Kindle Book
@@ -222,15 +217,67 @@ summary
 
 attribute | name of vector 순서가 있다.
 
-### Picking a system
+### Picking a system - Advanced R
 Three OO systems is a lot for one language, but for most R programming, S3 suffices. In R you usually create fairly simple objects and methods for pre-existing generic functions like print(), summary(), and plot(). S3 is well suited to this task, and the majority of OO code that I have written in R is S3. S3 is a little quirky, but it gets the job done with a minimum of code.
 If you are creating more complicated systems of interrelated objects, S4 may be more appropriate. A good example is the Matrix package by Douglas Bates and Martin Maechler. It is designed to efficiently store and compute with many different types of sparse matrices. As of version 1.1.3, it defines 102 classes and 20 generic functions. The package is well written and well commented, and the accompanying vignette (vignette("Intro2Matrix", package = "Matrix")) gives a good overview of the structure of the package. S4 is also used extensively by Bioconductor packages, which need to model complicated interrelationships between biological objects. Bioconductor provides many good resources for learning S4. If you’ve mastered S3, S4 is relatively easy to pick up; the ideas are all the same, it is just more formal, more strict, and more verbose.
 If you’ve programmed in a mainstream OO language, RC will seem very natural. But because they can introduce side effects through mutable state, they are harder to understand. For example, when you usually call f(a, b) in R you can assume that a and b will not be modified. But if a and b are RC objects, they might be modified in the place. Generally, when using RC objects you want to minimise side effects as much as possible, and use them only where mutable states are absolutely required. The majority of functions should still be “functional”, and free of side effects. This makes code easier to reason about and easier for other R programmers to understand.
 
+# S4 기초
+S4 클래스로 프로그래밍을 하기 위해서 기본적으로 다음 함수들을 시용해야 한다.
+
+setClass()
+new()
+setGeneric()
+setMethod()
+클래스
+새로운 클래스는 다음처럼 setClass() 함수를 이용하여 정의한다.
+
+setClass("circle",
+  representation(x="numeric", y="numeric", r="numeric"))
+이제 new()를 이용하여 인스턴스를 만들 수 있다. 객체의 속성을 S4에서늘 슬롯(slot)이라고 한다. 슬롯은 object@slot 형태로 접근할 수 있다.
+> a <- new("circle", x=5, y=10, r=4)
+> str(a)
+Formal class 'circle' [package ".GlobalEnv"] with 3 slots
+  ..@ x: num 5
+  ..@ y: num 10
+  ..@ r: num 4
+> a@x
+[1] 5
+> a@y
+[1] 10
+> a@r
+[1] 4
+한 객체가 특정 클래스에 속하는지 체크할 때는 is()를 이용한다.
+> is(a, "circle")
+[1] TRUE
+메소드
+메소드는 setMethod()를 이용하여 정의한다. 기존의 정의된 generic function이 없다면 우선 generic function부터 만들어야 하는데 이때에는 setGeneric()을 이용한다. 예를 들면 다음처럼 한다.
+
+setGeneric("area", function(object) standardGeneric("area"))
+
+setMethod("area", "circle",
+          function(object) pi * object@r^2
+          )
+이제 메소드를 사용해 보면
+> area(a)
+[1] 50.26548
+> area(new("circle", x=3, y=4, r=3))
+[1] 28.27433
+한 generic function에 어떤 method들이 있는지 알고 싶을 때는 showMethods()를 이용한다.
+
+> showMethods("area")
+Function: area (package .GlobalEnv)
+object="circle"
+참조
 
 ### 참고
+- 프로그래밍 언어 https://namu.wiki/w/%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%20%EC%96%B8%EC%96%B4
+- 객체 지향 프로그래밍 https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D?from=OOP#s-3.1
+- 객체 지향 프로그래밍/원칙  https://namu.wiki/w/%EA%B0%9D%EC%B2%B4%20%EC%A7%80%ED%96%A5%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/%EC%9B%90%EC%B9%99
 - http://adv-r.had.co.nz/S3.html
 - http://en.wikipedia.org/wiki/Generic_function
 - http://en.wikipedia.org/wiki/Multiple_dispatch
 - http://harlequinblue.blogspot.kr/2011/07/r-s4.html
 - http://dic1224.blog.me/80208274042
+- http://www.soph.uab.edu/Statgenetics/Events/Rshort/060227-8-s4slides.pdf
+- John M. Chambers (2008), Software for data analysis: programming with R, Springer.
