--- a/_posts/News/2012-08-01-NIH-News.md
+++ b/_posts/News/2012-08-01-NIH-News.md
@@ -1,9 +1,10 @@
 ---
 title: NIH News
 layout: post
-categories: News
 comments: true
 share: true
+categories: News
+tags: [NINDS, NIH, News]
 ---
 
 [NIH researchers implicate unique cell type in multiple sclerosis
