--- a/_posts/2016-06-07-Tozer.md
+++ b/_posts/2016-06-07-Tozer.md
@@ -2,7 +2,10 @@
 layout: post
 title: Tozer 11장 연습문제 6번
 date: 2016-06-07
-tags: Clinical Pharmacology
+tags: [Clinical Pharmacology]
+categories: CPT
+share: true
+comments: true
 ---
 
 Prof.Lim's lecture
