--- a/_posts/2016-06-29-DB.md
+++ b/_posts/2016-06-29-DB.md
@@ -3,6 +3,8 @@ title: OSX에서 MySQL 설치하기, SQL 문법
 layout: post
 comments: true
 share: true
+categories: DataScience
+tags: [Data Science, MySQL, DB]
 ---
 
 ## MySQL 설치하기
