--- a/_posts/CPT/2016-05-25-Pirana.md
+++ b/_posts/CPT/2016-05-25-Pirana.md
@@ -3,6 +3,7 @@ layout: post
 title: Pirana and PsN
 categories: CPT
 comments: true
+tags: [NONMEM, Data Science]
 ---
 
 여러 제한 점이 있음에도 유용하고 쓸만한 프로그램이란 생각이 듭니다.
