--- a/_posts/DataScience/2016-06-29-DB.md
+++ b/_posts/DataScience/2016-06-29-DB.md
@@ -37,7 +37,8 @@ Or, if you don't want/need a background service you can just run:
 ```
 
 서버를 시작하게 됩니다. 성공!
-```
+
+```SQL
 $ mysql.server start
 Starting MySQL
 ... SUCCESS!
@@ -46,7 +47,7 @@ $ mysql -uroot
 
 mysql창에서 아이디와 비밀번호를 생성합니다.
 
-```
+```SQL
 mysql> grant all privileges on testdb.* to dev@localhost identified by 'password123';
 Query OK, 0 rows affected, 1 warning (0.03 sec)
 mysql> \q
