Tags in the front Working okay?

--- a/_posts/DataScience/2016-06-29-DB.md
+++ b/_posts/DataScience/2016-06-29-DB.md
@@ -1,5 +1,5 @@
 ---
-title: OSX에서 MySQL 설치하기, SQL 문법
+title: OSX에서 MySQL 설치하기, RMySQL 패키지 사용, SQL 문법
 layout: post
 comments: true
 share: true
@@ -10,6 +10,7 @@ tags: [Data Science, MySQL, DB]
 ## MySQL 설치하기
 
 다음 명령어를 터미널에서 입력합니다.
+
 ```
 $ brew install mysql
 ```
@@ -45,51 +46,29 @@ Starting MySQL
 $ mysql -uroot
 ```
 
-mysql창에서 아이디와 비밀번호를 생성합니다.
+uroot권한으로 접속하여 mysql창에서 DB를 생성하고 아이디와 비밀번호를 생성합니다.
 
-```SQL
-mysql> grant all privileges on testdb.* to dev@localhost identified by 'password123';
-Query OK, 0 rows affected, 1 warning (0.03 sec)
+```
+mysql> create database CJDate7e;
+mysql> grant all privileges on CJDate7e.* to shan@localhost identified by 'asan1234';
 mysql> \q
 ```
 
-create database CJDate7e;
-grant all privileges on CJDate7e.* to shan@localhost identified by 'asan1234';
+이제 Terminal 창에서 shan으로 DB에 접속합니다.
 
+```
 $ mysql -u shan -p
-
 mysql> use CJDate7e;
-
-dbConnect(RMySQL::MySQL(), dbname = "CJDate7e", user="shan", password="asan1234")
-
-
-이제는 terminal에서 다음과 같이 dev 아이디를 사용해서 접속해보자.
-
-```
-$ mysql -u dev -p
-Enter password:
-Welcome to the MySQL monitor.  Commands end with ; or \g.
-Your MySQL connection id is 5
-Server version: 5.7.13 Homebrew
-
-Copyright (c) 2000, 2016, Oracle and/or its affiliates. All rights reserved.
-
-Oracle is a registered trademark of Oracle Corporation and/or its
-affiliates. Other names may be trademarks of their respective
-owners.
-
-Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-mysql>
 ```
 
-이제 r에서 접속해보자.
-```r
+자, 이제 모든 준비가 끝났습니다. 이제 r에서 접속해보겠습니다.
+
+``` {r}
 library(RMySQL)
-dbConnect(RMySQL::MySQL(), dbname = "testdb", user="dev", password="password123")
+MyDB = dbConnect(RMySQL::MySQL(), dbname = "CJDate7e", user="shan", password="asan1234")
 ```
 
-다시 MySQL로 돌아와서
+다시 MySQL로 돌아와서 Table을 채워 넣겠습니다. (C.J. Date Intro to DB Systems, 7e)
 
 ```
 DROP TABLE S;
@@ -165,11 +144,23 @@ INSERT INTO SPJ (SNO, PNO, JNO, QTY) VALUES ('S5', 'P5', 'J4', 400);
 INSERT INTO SPJ (SNO, PNO, JNO, QTY) VALUES ('S5', 'P6', 'J4', 500);
 ```
 
+R에서 SQL query를 입력하여 그 값을 받아보겠습니다.
+
+```
+dbGetQuery(MyDB,"SELECT DISTINCT JNO FROM SPJ WHERE NOT SPJ.SNO = 'S2'")
+```
+
+이제 DB를 닫고 마무리 합니다.
+
+```
+dbDisconnect(MyDB)
+```
+
 
 ## 데이터를 어떻게 저장할지 정의하기
 
-* CREATE DATABASE 는 비어있는 데이터베이스를 새롭게 만들려고 할 때 사용한다.
-* DROP DATABASE 는 존재하고 있는 데이터베이스를 완전히 제거하기 위해서 사용한다.
+* CREATE DATABASE 는 비어있는 데이터베이스를 새롭게 만들려고 할 때 사용합니다.
+* DROP DATABASE 는 존재하고 있는 데이터베이스를 완전히 제거하기 위해서 사용합니다.
 * USE 는 기본 데이터베이스를 지정하는데 사용한다.
 * CREATE TABLE 은, 여러분의 데이터가 실제로 저장되는, 새로운 테이블을 생성하는데 사용한다.
 * ALTER TABLE 은 존재하고 있는 테이블의 정의를 변경할 때에 사용한다.
@@ -192,6 +183,7 @@ INSERT INTO SPJ (SNO, PNO, JNO, QTY) VALUES ('S5', 'P6', 'J4', 500);
 * ROLLBACK 는 변경사항을 포기하고 트랜잭션을 종료한다.
 
 ## 간단한 예제
+
 ```
 CREATE DATABASE mydb; -- mydb 데이터베이스 생성
 USE mydb; -- 기본 데이터베이스로 mydb를 지정
